--- a/src/main/webapp/hotWeiBo/hotWeiBo.css
+++ b/src/main/webapp/hotWeiBo/hotWeiBo.css
@@ -138,7 +138,7 @@ body {
 
 #zyBox{
     margin:0 auto;
-    width: 50em;
+    width: 36em;
     background: #c1b5a2;
     margin-top: 5em;
 }
@@ -211,21 +211,8 @@ body {
 
 #zyBox #imformation{
     display: inline-block;
-    margin-right: 0.625em;
-    width: 37.5em;
-    vertical-align:top;
-    margin-top: 0.9375em;    
-}
-#imformation #getNumber{
-    margin-top: 0.4em;
-    padding-left: 0.5em;
-    background: #ffffff;
-    width: 100%;
-    height: 2.5em;
-    line-height: 2.5em;
-    font-size: 0.9em;
-    font-family: 微软雅黑;
-    font-weight: bold;
-    color: #333333;
+    margin: 0.9375em auto 0;
+    width: 36em;
+    vertical-align:top; 
 }
 
